--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!--
 Requirements (Functional)
-1.
-2.
-3.
-4.
-5.
-6.
-7.
+1. PAge shall represent the CV
+2.Multiple languages should be available
+3. CV built in 2 columns: left colum for titles, right column for text
+4.example in german book on CVs
+5.hosting in github
+6. simple styling
+7. study frontend dev libraries to improve page
 8
 
 -->
